# CG

./: .gitignore
1-lab/: CMakeLists.txt
1-lab/task1/: CMakeLists.txt  main.cpp
1-lab/task1/Letter/: Color.h  Letter.h  Position.h
1-lab/task1/Letter/DrawStrategy/: DrawA.h  DrawE.h  DrawT.h  IDrawStrategy.h
1-lab/task1/Letter/JumpStrategy/: IJumpStrategy.h  UniformJump.h
1-lab/task1/Letter/Strategy/: IDrawStrategy.h  StrategyA.h  StrategyE.h  StrategyT.h
1-lab/task3/: CMakeLists.txt  Canvas.h  Circle.h  main.cpp
1-lab/task3/Common/: Color.h  Position.h
example/: package.json
example/src/: index.html
